<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyWord</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="all_document">所有笔记</string>
    <string name="tools">工具</string>
    
    <string name="node_add_tools_font">字体</string>
    <string name="font_size">字体大小</string>
    <string name="font_color">字体颜色</string>
    <string name="font_style">字体样式</string>
    <string name="more">更多</string>
    
    
    <!-- 字体样式 -->
    <string name="B">B</string>
    <string name="I">I</string>
	<string name="U">U</string>
	
	<string name="select_picture">选择图片</string>
	<string name="ok">确定</string>
	<string name="cancel">取消</string>
    <string name="write_note">写笔记</string>
    <string name="tip">提示</string>
    <string name="tip_message">你已修改该笔记，是否保存？</string>
    <string name="abandon">舍弃</string>
    <string name="save">保存</string>
    <string name="input_title_tip">请输入标题</string>
    <string name="input_content_tip">请输入内容</string>
    <string name="save_fail">保存失败</string>
    <string name="save_success">保存成功</string>
    
    <string name="login">登录</string>
    <string name="register">注册</string>
    
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="validate_code">验证码</string>
    <string name="login_fail">登录失败</string>
    <string name="input_username_tip">请输入用户名</string>
    <string name="input_phone_tip">请输入手机号</string>
    <string name="input_username_phone_tip">请输入用户名或手机号</string>
    <string name="input_password_tip">请输入密码</string>
    <string name="input_validatecode_tip">请输入验证码</string>
    <string name="get_validate_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="reget">重新获取</string>
    <string name="validate_code_error">验证码不正确</string>
    <string name="register_fail">注册失败</string>
    <string name="username_alread_register">该用户名已被注册</string>
    <string name="phone_alread_register">该手机号码已被注册</string>
    <string name="default_note_picture_display_text">[图片]</string>
    <string name="username_phone">用户名/手机号</string>
    
    <string name="color_picker">拾色器</string>
    <string name="current_color">当前颜色</string>
    <string name="no_select_color">未选择颜色</string>
    <!-- 查看笔记 -->
    <string name="lookup_note">查看笔记</string>
    <string name="revise">修改</string>
    
    <!-- 个人 -->
    <string name="settings">设置</string>
    <string name="personality_info">个人信息</string>
    <string name="sex">性别</string>
    <string name="introduction">简介</string>
    <string name="select_sex">请选择性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="change_phone_tip">请输入手机号</string>
    
</resources>
